# AI-Startup-Decision-Simulator

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: __init__.py  models.py  startup_env.py  tasks.py
server/: app.py
